# Cpp-Project-Template

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  Vagrantfile  bootstrap.sh  configure
src/: CMakeLists.txt  app.cpp  app.h  appinfo.h  appinfo.h.in.cmake  main.cxx
test/: CMakeLists.txt  app_test.cpp  sample_test.cpp  sanity_check.cpp
tools/share/: jenkins-config.xml
tools/share/cmake/: CodeCoverage.cmake  CxxFlags.cmake  DocumentationTargets.cmake
